support running bencher with Java 17; upgraded Kotlin to 1.9.10; upgraded WALA 1.6.2 and Arrow to 1.2.1